--- a/AI_Agent.ipynb
+++ b/AI_Agent.ipynb
@@ -71,7 +71,7 @@
       "source": [
         "@tool\n",
         "def get_weather_data(city: str) -> str:\n",
-        "    \"\"\"This function fetches the current weather conditions for a given city.\"\"\"\n",
+        "    \"\"\"This Function fetches the current weather conditions for a given city.\"\"\"\n",
         "\n",
         "    url = f'http://api.weatherstack.com/current?access_key=7e52922e0e1bada607e0e7c9821b187b&query={city}'\n",
         "\n",
